--- a/index.html
+++ b/index.html
@@ -146,60 +146,61 @@
 
 <!-- SCREEN 2 (THREE PANELS) -->
 <div id="screen2" class="screen hidden"
-     style="background:url('assets/SCREEN3.jpeg') no-repeat center center/cover;"></div>
-     <!-- PANEL STRUCTURE FOR SCREEN 2 -->
-<div class="panel-container">
+     style="background:url('assets/SCREEN3.jpeg') no-repeat center center/cover;">
 
-    <!-- PANEL 1 -->
-    <div class="panel" onclick="flipPanel(1)">
-        <div class="panel-inner" id="p1">
-            <div class="front">
-                <img src="assets/ima1.jpeg">
-            </div>
-            <div class="back">
-                <div class="panel-text">
-                    Happiest birthday Nicky, always stay happy.<br>
-                    You’re one of the most precious parts of my life.<br>
-                    Every moment with you feels warm, soft, and safe.<br>
-                    Tap the 2nd image UMAHH.
+    <div class="panel-container">
+
+        <!-- PANEL 1 -->
+        <div class="panel" onclick="flipPanel(1)">
+            <div class="panel-inner" id="p1">
+                <div class="front">
+                    <img src="assets/ima1.jpeg">
+                </div>
+                <div class="back">
+                    <div class="panel-text">
+                        Happiest birthday Nicky, always stay happy.<br>
+                        You’re one of the most precious parts of my life.<br>
+                        Every moment with you feels warm, soft, and safe.<br>
+                        Tap the 2nd image UMAHH.
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- PANEL 2 -->
-    <div class="panel" onclick="flipPanel(2)">
-        <div class="panel-inner" id="p2">
-            <div class="front">
-                <img src="assets/ima2.jpeg">
-            </div>
-            <div class="back">
-                <div class="panel-text">
-                    Your smile, your heart, your softness…<br>
-                    I fall for them a little more every day.
+        <!-- PANEL 2 -->
+        <div class="panel" onclick="flipPanel(2)">
+            <div class="panel-inner" id="p2">
+                <div class="front">
+                    <img src="assets/ima2.jpeg">
+                </div>
+                <div class="back">
+                    <div class="panel-text">
+                        Your smile, your heart, your softness…<br>
+                        I fall for them a little more every day.
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- PANEL 3 -->
-    <div class="panel" onclick="flipPanel(3)">
-        <div class="panel-inner" id="p3">
-            <div class="front">
-                <img src="assets/ima3.jpeg">
-            </div>
-            <div class="back">
-                <div class="panel-text">
-                    No matter where life takes us,<br>
-                    my feelings for you will always stay the same—<br>
-                    pure, patient, gentle, and true.
+        <!-- PANEL 3 -->
+        <div class="panel" onclick="flipPanel(3)">
+            <div class="panel-inner" id="p3">
+                <div class="front">
+                    <img src="assets/ima3.jpeg">
+                </div>
+                <div class="back">
+                    <div class="panel-text">
+                        No matter where life takes us,<br>
+                        my feelings for you will always stay the same—<br>
+                        pure, patient, gentle, and true.
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
+    </div>
 </div>
-</div>
+
 
 
 <!-- SCREEN 3 — LETTER PAGE -->
